--- a/DataPrep/Rzepa/preprocessing.ipynb
+++ b/DataPrep/Rzepa/preprocessing.ipynb
@@ -2,17 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import regex as re"
+    "from data_pipeline import data_pipeline, restore_authors, dot_problem_solver\n",
+    "from math import ceil"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,18 +37,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "source\n",
        "Rzeczpospolita    216163\n",
-       "Name: count, dtype: int64"
+       "Name: source, dtype: int64"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,166 +68,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def data_pipeline(data, cols):\n",
-    "    data = data[data['text'].notna()]\n",
-    "    data.loc[~data['title'].apply(lambda x: isinstance(x, str)), 'title'] = \"None\"  # newsweek\n",
-    "\n",
-    "    for col in cols:\n",
-    "        data[col] = data[col].fillna('None')\n",
-    "\n",
-    "    CLEAN_XLSX_1 = re.compile('[(∑)]')\n",
-    "    REPLACE_EXCESS_SPACES_RE = re.compile('\\s\\s+')\n",
-    "    data['text'] = data['text'].apply(lambda x: re.split('(?i)©℗\\s*Więcej\\s*na', x)[0])\n",
-    "    for col in cols:\n",
-    "        data[col] = data[col].apply(lambda x: REPLACE_EXCESS_SPACES_RE.sub(' ', x))\n",
-    "        data[col] = data[col].apply(lambda x: CLEAN_XLSX_1.sub('', x))\n",
-    "        data[col] = data[col].apply(lambda x: x.replace(\"\\xad\", \"\"))\n",
-    "        data[col] = data[col].apply(lambda x: x.replace(\"\\xa0\", \" \"))\n",
-    "        data[col] = data[col].apply(lambda x: x.replace(\"_x0007_\", \" \"))\n",
-    "\n",
-    "\n",
-    "    data['department'] = data['department'].str.strip()\n",
-    "    data['author'] = data['author'].str.strip()\n",
-    "    return data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def author_extract(text):\n",
-    "    extracted = re.search('((?<=\\\\t—).*)|(.*(?=@rp\\.pl))', text)\n",
-    "    return extracted[0] if extracted is not None else extracted\n",
-    "\n",
-    "\n",
-    "def restore_authors(df):\n",
-    "    df['last'] = df['text'].apply(lambda x: x.split(' ')[-1])\n",
-    "    df['extracted'] = df['last'].apply(author_extract)\n",
-    "    df.loc[df['author']=='None', 'author'] = df[\"extracted\"]\n",
-    "    df.drop(columns = ['last', 'extracted'], inplace = True)\n",
-    "    return df\n",
-    "\n",
-    "def dot_problem_solver(text):\n",
-    "    THREE_DOT_RE = re.compile('(?<=[^\\s])\\.\\.\\.(?=[^\\s])')\n",
-    "    text = THREE_DOT_RE.sub('... ', text)\n",
-    "    DOT_RE = re.compile('(?<=[^\\s\\.])\\.(?=[^\\s\\.])')\n",
-    "    text = DOT_RE.sub('. ', text)\n",
-    "    QUEST_RE = re.compile('(?<=[^\\s])\\?(?=[^\\s])')\n",
-    "    text = QUEST_RE.sub('? ', text)\n",
-    "    return text"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def splitter(text):\n",
-    "    re_expr = \"([A-Z]*[a-z]+)([A-Z][a-z]*)\"\n",
-    "    matches = re.findall(re_expr, text)\n",
-    "    if matches != None:\n",
-    "        for match in matches:\n",
-    "            text_found = \"\".join(match)\n",
-    "            to_replace = match[0] + \" \" + match[1]\n",
-    "            text = text.replace(text_found, to_replace)\n",
-    "    return text\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_3248/2377280704.py:6: SettingWithCopyWarning: \n",
+      "/home/hombre/Code/Climate Project/DataPrep/Rzepa/data_pipeline.py:40: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  data[col] = data[col].fillna('None')\n",
-      "/tmp/ipykernel_3248/2377280704.py:10: SettingWithCopyWarning: \n",
+      "/home/hombre/Code/Climate Project/DataPrep/Rzepa/data_pipeline.py:44: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  data['text'] = data['text'].apply(lambda x: re.split('(?i)©℗\\s*Więcej\\s*na', x)[0])\n",
-      "/tmp/ipykernel_3248/2377280704.py:12: SettingWithCopyWarning: \n",
+      "/home/hombre/Code/Climate Project/DataPrep/Rzepa/data_pipeline.py:46: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  data[col] = data[col].apply(lambda x: REPLACE_EXCESS_SPACES_RE.sub(' ', x))\n",
-      "/tmp/ipykernel_3248/2377280704.py:13: SettingWithCopyWarning: \n",
+      "/home/hombre/Code/Climate Project/DataPrep/Rzepa/data_pipeline.py:47: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  data[col] = data[col].apply(lambda x: CLEAN_XLSX_1.sub('', x))\n",
-      "/tmp/ipykernel_3248/2377280704.py:14: SettingWithCopyWarning: \n",
+      "/home/hombre/Code/Climate Project/DataPrep/Rzepa/data_pipeline.py:48: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  data[col] = data[col].apply(lambda x: x.replace(\"\\xad\", \"\"))\n",
-      "/tmp/ipykernel_3248/2377280704.py:15: SettingWithCopyWarning: \n",
+      "/home/hombre/Code/Climate Project/DataPrep/Rzepa/data_pipeline.py:49: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  data[col] = data[col].apply(lambda x: x.replace(\"\\xa0\", \" \"))\n",
-      "/tmp/ipykernel_3248/2377280704.py:16: SettingWithCopyWarning: \n",
+      "/home/hombre/Code/Climate Project/DataPrep/Rzepa/data_pipeline.py:50: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  data[col] = data[col].apply(lambda x: x.replace(\"_x0007_\", \" \"))\n",
-      "/tmp/ipykernel_3248/2377280704.py:12: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  data[col] = data[col].apply(lambda x: REPLACE_EXCESS_SPACES_RE.sub(' ', x))\n",
-      "/tmp/ipykernel_3248/2377280704.py:13: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  data[col] = data[col].apply(lambda x: CLEAN_XLSX_1.sub('', x))\n",
-      "/tmp/ipykernel_3248/2377280704.py:14: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  data[col] = data[col].apply(lambda x: x.replace(\"\\xad\", \"\"))\n",
-      "/tmp/ipykernel_3248/2377280704.py:15: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  data[col] = data[col].apply(lambda x: x.replace(\"\\xa0\", \" \"))\n",
-      "/tmp/ipykernel_3248/2377280704.py:16: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  data[col] = data[col].apply(lambda x: x.replace(\"_x0007_\", \" \"))\n",
-      "/tmp/ipykernel_3248/2377280704.py:19: SettingWithCopyWarning: \n",
+      "/home/hombre/Code/Climate Project/DataPrep/Rzepa/data_pipeline.py:53: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  data['department'] = data['department'].str.strip()\n",
-      "/tmp/ipykernel_3248/2377280704.py:20: SettingWithCopyWarning: \n",
+      "/home/hombre/Code/Climate Project/DataPrep/Rzepa/data_pipeline.py:54: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -237,71 +133,9 @@
     }
    ],
    "source": [
-    "data = data_pipeline(data, cols_newsweek)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#data_all = restore_authors(data_all) # Rzepa\n",
-    "data['text'] = data['text'].apply(dot_problem_solver)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!mkdir chunks"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['xd xd haha nie ma jej tu']"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "re.split(\"twoja stara\", \"xd xd haha nie ma jej tu\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from math import ceil\n",
-    "\n",
-    "def chunkit(df, chunk_size= 10000):\n",
-    "    num_chunks = ceil(len(df) / chunk_size)\n",
-    "    for i in range(num_chunks):\n",
-    "        yield df[i*chunk_size:(i + 1) * chunk_size]\n",
-    "\n",
-    "for i, chunk in enumerate(chunkit(data)): chunk.to_csv(f\"chunks/rzepa_{i}.csv\", index=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!rm -r chunks"
+    "data = data_pipeline(data, cols_rzepa)\n",
+    "data = restore_authors(data) # Rzepa\n",
+    "data['text'] = data['text'].apply(dot_problem_solver)"
    ]
   },
   {
@@ -318,7 +152,32 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "!mkdir chunks"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def chunkit(df, chunk_size= 10000):\n",
+    "    num_chunks = ceil(len(df) / chunk_size)\n",
+    "    for i in range(num_chunks):\n",
+    "        yield df[i*chunk_size:(i + 1) * chunk_size]\n",
+    "\n",
+    "for i, chunk in enumerate(chunkit(data)): chunk.to_csv(f\"chunks/rzepa_{i}.csv\", index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!rm -r chunks"
+   ]
   }
  ],
  "metadata": {
