--- a/DataPrep/Rzepa/dataset_prep.ipynb
+++ b/DataPrep/Rzepa/dataset_prep.ipynb
@@ -8,7 +8,8 @@
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
-    "import regex as re"
+    "import regex as re\n",
+    "from data_pipeline import restore_authors"
    ]
   },
   {
@@ -134,24 +135,6 @@
     "data_translated = pd.concat([pd.read_csv(f'tagged/translated/translated_{i}.csv', index_col='id') for i in range(2)])\n",
     "translated_1_to_0 = data_translated[data_translated.index.isin(one_to_zero)].index.values\n",
     "translated_0_to_1 = data_translated[data_translated.index.isin(zero_to_one)].index.values"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def author_extract(text):\n",
-    "    extracted = re.search('((?<=\\\\t—).*)|(.*(?=@rp\\.pl))', text)\n",
-    "    return extracted[0] if extracted is not None else extracted\n",
-    "\n",
-    "def restore_authors(df):\n",
-    "    df['last'] = df['text'].apply(lambda x: x.split(' ')[-1])\n",
-    "    df['extracted'] = df['last'].apply(author_extract)\n",
-    "    df.loc[df['author']=='None', 'author'] = df[\"extracted\"]\n",
-    "    df.drop(columns = ['last', 'extracted'], inplace = True)\n",
-    "    return df"
    ]
   },
   {
