--- a/Classification/files/ngram/ngrams.ipynb
+++ b/Classification/files/ngram/ngrams.ipynb
@@ -2,291 +2,49 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>source</th>\n",
-       "      <th>title</th>\n",
-       "      <th>magazine_nr</th>\n",
-       "      <th>text</th>\n",
-       "      <th>link</th>\n",
-       "      <th>author</th>\n",
-       "      <th>department</th>\n",
-       "      <th>imgage</th>\n",
-       "      <th>image_text</th>\n",
-       "      <th>date</th>\n",
-       "      <th>...</th>\n",
-       "      <th>vectorized</th>\n",
-       "      <th>proba</th>\n",
-       "      <th>words</th>\n",
-       "      <th>num_words</th>\n",
-       "      <th>ngram_sum</th>\n",
-       "      <th>ngram_sum_to_total</th>\n",
-       "      <th>ngram_sum_squared_to_total</th>\n",
-       "      <th>ngram_weak__ngrams</th>\n",
-       "      <th>label</th>\n",
-       "      <th>rank</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>id</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>28</th>\n",
-       "      <td>Rzeczpospolita</td>\n",
-       "      <td>Regaty i boje badawcze</td>\n",
-       "      <td>10030</td>\n",
-       "      <td>Naukowcy korzystają z pomocy żeglarzy podczas ...</td>\n",
-       "      <td>https://archiwum.rp.pl/artykul/1264480-Regaty-...</td>\n",
-       "      <td>Krzysztof Kowalski</td>\n",
-       "      <td>Nauka</td>\n",
-       "      <td>http://grafik.rp.pl/g4a/1264480,723005,9.jpg</td>\n",
-       "      <td>źródło: PAP/EPABarcelona World Race wystartowa...</td>\n",
-       "      <td>2015-01-02</td>\n",
-       "      <td>...</td>\n",
-       "      <td>[0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, ...</td>\n",
-       "      <td>0.824123</td>\n",
-       "      <td>['ziemia', 'woda', 'dwutlenek węgiel']</td>\n",
-       "      <td>3</td>\n",
-       "      <td>10.0</td>\n",
-       "      <td>0.021552</td>\n",
-       "      <td>0.215517</td>\n",
-       "      <td>0.900000</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>38</th>\n",
-       "      <td>Rzeczpospolita</td>\n",
-       "      <td>Europejski rynek gazu dla każdego</td>\n",
-       "      <td>10030</td>\n",
-       "      <td>Europejski krajobraz energetyczny zmienił się ...</td>\n",
-       "      <td>https://archiwum.rp.pl/artykul/1264492-Europej...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Ciekawa ekonomia</td>\n",
-       "      <td>http://grafik.rp.pl/g4a/1264492,723013,9.jpg</td>\n",
-       "      <td>źródło: materiały prasoweAgata Łoskot-Strachota</td>\n",
-       "      <td>2015-01-02</td>\n",
-       "      <td>...</td>\n",
-       "      <td>[0.0, 1.0, 0.0, 0.0, 0.0, 0.0, 0.0, 5.0, 0.0, ...</td>\n",
-       "      <td>0.594037</td>\n",
-       "      <td>['energia', 'energetyczny', 'klimatyczny', 'po...</td>\n",
-       "      <td>5</td>\n",
-       "      <td>9.0</td>\n",
-       "      <td>0.015025</td>\n",
-       "      <td>0.135225</td>\n",
-       "      <td>0.222222</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>43</th>\n",
-       "      <td>Rzeczpospolita</td>\n",
-       "      <td>Miliony na rolnictwo i medycynę</td>\n",
-       "      <td>10030</td>\n",
-       "      <td>330 mln złotych przekaże Narodowe Centrum Bada...</td>\n",
-       "      <td>https://archiwum.rp.pl/artykul/1264507-Miliony...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Ciekawa ekonomia</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2015-01-02</td>\n",
-       "      <td>...</td>\n",
-       "      <td>[0.0, 0.0, 0.0, 0.0, 0.0, 2.0, 1.0, 0.0, 0.0, ...</td>\n",
-       "      <td>0.999997</td>\n",
-       "      <td>['środowisko', 'zrównoważony', 'woda', 'zrówno...</td>\n",
-       "      <td>8</td>\n",
-       "      <td>9.0</td>\n",
-       "      <td>0.061644</td>\n",
-       "      <td>0.554795</td>\n",
-       "      <td>0.444444</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>131</th>\n",
-       "      <td>Rzeczpospolita</td>\n",
-       "      <td>Dym – nad miastem i w płucach</td>\n",
-       "      <td>10032</td>\n",
-       "      <td>Liczba zgonów z powodu przewlekłej obturacyjne...</td>\n",
-       "      <td>https://archiwum.rp.pl/artykul/1264572-Dym-–-n...</td>\n",
-       "      <td>Krzysztof Urbański</td>\n",
-       "      <td>Rzecz o zdrowiu</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2015-01-05</td>\n",
-       "      <td>...</td>\n",
-       "      <td>[0.0, 0.0, 0.0, 0.0, 0.0, 1.0, 0.0, 0.0, 9.0, ...</td>\n",
-       "      <td>0.992689</td>\n",
-       "      <td>['środowisko', 'powietrze', 'jakość powietrze'...</td>\n",
-       "      <td>6</td>\n",
-       "      <td>16.0</td>\n",
-       "      <td>0.041558</td>\n",
-       "      <td>0.664935</td>\n",
-       "      <td>0.625000</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>153</th>\n",
-       "      <td>Rzeczpospolita</td>\n",
-       "      <td>Energetyka renegocjuje umowy na węgiel</td>\n",
-       "      <td>10032</td>\n",
-       "      <td>Już w końcu 2014 r. widać było presję sektora ...</td>\n",
-       "      <td>https://archiwum.rp.pl/artykul/1264583-Energet...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Ciekawa ekonomia</td>\n",
-       "      <td>http://grafik.rp.pl/g4a/1264583,723063,9.jpg</td>\n",
-       "      <td>źródło: RzeczpospolitaDominuje  węgiel kamienny</td>\n",
-       "      <td>2015-01-05</td>\n",
-       "      <td>...</td>\n",
-       "      <td>[0.0, 3.0, 0.0, 0.0, 0.0, 0.0, 0.0, 2.0, 0.0, ...</td>\n",
-       "      <td>0.990400</td>\n",
-       "      <td>['energia', 'energetyczny', 'cena energia']</td>\n",
-       "      <td>3</td>\n",
-       "      <td>7.0</td>\n",
-       "      <td>0.026217</td>\n",
-       "      <td>0.183521</td>\n",
-       "      <td>0.428571</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>5 rows × 22 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "             source                                   title  magazine_nr  \\\n",
-       "id                                                                         \n",
-       "28   Rzeczpospolita                  Regaty i boje badawcze        10030   \n",
-       "38   Rzeczpospolita       Europejski rynek gazu dla każdego        10030   \n",
-       "43   Rzeczpospolita         Miliony na rolnictwo i medycynę        10030   \n",
-       "131  Rzeczpospolita           Dym – nad miastem i w płucach        10032   \n",
-       "153  Rzeczpospolita  Energetyka renegocjuje umowy na węgiel        10032   \n",
-       "\n",
-       "                                                  text  \\\n",
-       "id                                                       \n",
-       "28   Naukowcy korzystają z pomocy żeglarzy podczas ...   \n",
-       "38   Europejski krajobraz energetyczny zmienił się ...   \n",
-       "43   330 mln złotych przekaże Narodowe Centrum Bada...   \n",
-       "131  Liczba zgonów z powodu przewlekłej obturacyjne...   \n",
-       "153  Już w końcu 2014 r. widać było presję sektora ...   \n",
-       "\n",
-       "                                                  link              author  \\\n",
-       "id                                                                           \n",
-       "28   https://archiwum.rp.pl/artykul/1264480-Regaty-...  Krzysztof Kowalski   \n",
-       "38   https://archiwum.rp.pl/artykul/1264492-Europej...                 NaN   \n",
-       "43   https://archiwum.rp.pl/artykul/1264507-Miliony...                 NaN   \n",
-       "131  https://archiwum.rp.pl/artykul/1264572-Dym-–-n...  Krzysztof Urbański   \n",
-       "153  https://archiwum.rp.pl/artykul/1264583-Energet...                 NaN   \n",
-       "\n",
-       "           department                                        imgage  \\\n",
-       "id                                                                    \n",
-       "28              Nauka  http://grafik.rp.pl/g4a/1264480,723005,9.jpg   \n",
-       "38   Ciekawa ekonomia  http://grafik.rp.pl/g4a/1264492,723013,9.jpg   \n",
-       "43   Ciekawa ekonomia                                           NaN   \n",
-       "131   Rzecz o zdrowiu                                           NaN   \n",
-       "153  Ciekawa ekonomia  http://grafik.rp.pl/g4a/1264583,723063,9.jpg   \n",
-       "\n",
-       "                                            image_text        date  ...  \\\n",
-       "id                                                                  ...   \n",
-       "28   źródło: PAP/EPABarcelona World Race wystartowa...  2015-01-02  ...   \n",
-       "38    źródło: materiały prasoweAgata Łoskot-Strachota   2015-01-02  ...   \n",
-       "43                                                 NaN  2015-01-02  ...   \n",
-       "131                                                NaN  2015-01-05  ...   \n",
-       "153    źródło: RzeczpospolitaDominuje  węgiel kamienny  2015-01-05  ...   \n",
-       "\n",
-       "                                            vectorized     proba  \\\n",
-       "id                                                                 \n",
-       "28   [0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, ...  0.824123   \n",
-       "38   [0.0, 1.0, 0.0, 0.0, 0.0, 0.0, 0.0, 5.0, 0.0, ...  0.594037   \n",
-       "43   [0.0, 0.0, 0.0, 0.0, 0.0, 2.0, 1.0, 0.0, 0.0, ...  0.999997   \n",
-       "131  [0.0, 0.0, 0.0, 0.0, 0.0, 1.0, 0.0, 0.0, 9.0, ...  0.992689   \n",
-       "153  [0.0, 3.0, 0.0, 0.0, 0.0, 0.0, 0.0, 2.0, 0.0, ...  0.990400   \n",
-       "\n",
-       "                                                 words  num_words ngram_sum  \\\n",
-       "id                                                                            \n",
-       "28              ['ziemia', 'woda', 'dwutlenek węgiel']          3      10.0   \n",
-       "38   ['energia', 'energetyczny', 'klimatyczny', 'po...          5       9.0   \n",
-       "43   ['środowisko', 'zrównoważony', 'woda', 'zrówno...          8       9.0   \n",
-       "131  ['środowisko', 'powietrze', 'jakość powietrze'...          6      16.0   \n",
-       "153        ['energia', 'energetyczny', 'cena energia']          3       7.0   \n",
-       "\n",
-       "     ngram_sum_to_total  ngram_sum_squared_to_total  ngram_weak__ngrams  \\\n",
-       "id                                                                        \n",
-       "28             0.021552                    0.215517            0.900000   \n",
-       "38             0.015025                    0.135225            0.222222   \n",
-       "43             0.061644                    0.554795            0.444444   \n",
-       "131            0.041558                    0.664935            0.625000   \n",
-       "153            0.026217                    0.183521            0.428571   \n",
-       "\n",
-       "     label  rank  \n",
-       "id                \n",
-       "28     1.0     2  \n",
-       "38     1.0     4  \n",
-       "43     1.0     2  \n",
-       "131    1.0     2  \n",
-       "153    1.0     2  \n",
-       "\n",
-       "[5 rows x 22 columns]"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "from ngrams import save_rest_ngrams, lemmatizer\n",
+    "from ngrams import save_rest_ngrams, lemmatizer, get_eco_vocab\n",
+    "import pandas as pd\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "import pandas as pd\n",
-    "import spacy\n",
-    "\n",
-    "df = pd.read_csv(\"../dataset/eco_rzepa.csv\", index_col='id')\n",
-    "df.head()"
+    "import regex as re\n",
+    "files = [\"topics/car_grams.csv\", \"topics/klimat_grams.csv\", \"topics/trash_grams.csv\",\"topics/water_grams.csv\"]\n",
+    "data = []\n",
+    "for file in files:\n",
+    "    df = pd.read_csv(file)\n",
+    "    df['origin'] = re.search(\"/(.*)_\", file).group(1)\n",
+    "    df.drop(columns='count', inplace=True)\n",
+    "    data.append(df)\n",
+    "df = pd.concat(data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "vocab = get_eco_vocab()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "vocab_df = pd.DataFrame(vocab.items(), columns=['phrase', 'count'])\n",
+    "vocab_df[~vocab_df['phrase'].isin(df.phrase)].to_csv(\"rest.csv\", index=False)"
    ]
   },
   {
@@ -294,29 +52,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "save_rest_ngrams(df[df['rank'] == 2])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'elektromobilność elektromobilność elektromobilność'"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "lemmatizer(\"elektromobilność elektromobilności elektromobilnością\")"
-   ]
+   "source": []
   }
  ],
  "metadata": {
