--- a/Classification/Classification.ipynb
+++ b/Classification/Classification.ipynb
@@ -166,7 +166,6 @@
         "    scaler = StandardScaler()\n",
         "    meta_train = scaler.fit_transform(df_train[METAFEATURES])\n",
         "    meta_test = scaler.transform(df_test[METAFEATURES])\n",
-        "    #enc = OneHotEncoder(handle_unknown = 'ignore')\n",
         "    train_x = df_train.drop(columns=['label'])\n",
         "    train_y = df_train['label']\n",
         "\n",
@@ -174,8 +173,6 @@
         "    test_y = df_test['label']\n",
         "\n",
         "    text_train, text_test, vectorizer, selector = ngram_vectorize(train_x['clean_text'], train_y, test_x['clean_text'],return_models=True)\n",
-        "    #train_counted = train_x[['ngram_sum',\"ngram_sum_squared\",\"ngram_sum_squared_to_total\", \"ngram_sum_to_total\"]].to_numpy()\n",
-        "    #test_counted = test_x[['ngram_sum',\"ngram_sum_squared\",\"ngram_sum_squared_to_total\", \"ngram_sum_to_total\"]].to_numpy()\n",
         "    train_ngram_x  = np.concatenate([text_train, meta_train], axis=1)\n",
         "    test_ngram_x  = np.concatenate([text_test, meta_test], axis=1)\n",
         "    return train_ngram_x, train_y, test_ngram_x, test_y, scaler, vectorizer, selector\n",
@@ -443,8 +440,7 @@
         "try:\n",
         "    df_eco.drop(columns=['translated'], inplace=True)\n",
         "except:\n",
-        "    print(\"Droped already\")\n",
-        "    \n",
+        "    print(\"No translated documents found\")\n",
         "df_rest = df_rest[df_eco.columns.values]\n",
         "df_final = pd.concat([df_rest[df_rest['rank'] != 0], df_eco])\n",
         "df_final['rank'].value_counts()"
