--- a/DataPrep/Wprost/Wprost.ipynb
+++ b/DataPrep/Wprost/Wprost.ipynb
@@ -2,21 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import numpy as np\n",
-    "import seaborn as sns\n",
-    "import matplotlib.pyplot as plt\n",
-    "import csv\n",
     "import regex as re"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,17 +21,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "24\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "data = []\n",
     "file = files[1]\n",
@@ -68,132 +56,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df['ok'] = df['link'].apply(lambda x: x[:4] == 'http')\n"
+    "df['ok'] = df['link'].apply(lambda x: x[:4] == 'http')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>id</th>\n",
-       "      <th>title_main</th>\n",
-       "      <th>title_sub</th>\n",
-       "      <th>magazine_nr</th>\n",
-       "      <th>Wydanie</th>\n",
-       "      <th>text</th>\n",
-       "      <th>link</th>\n",
-       "      <th>source</th>\n",
-       "      <th>author 1</th>\n",
-       "      <th>author 2</th>\n",
-       "      <th>...</th>\n",
-       "      <th>author 8</th>\n",
-       "      <th>author 9</th>\n",
-       "      <th>author 10</th>\n",
-       "      <th>image</th>\n",
-       "      <th>image_desp</th>\n",
-       "      <th>hot</th>\n",
-       "      <th>vote_up</th>\n",
-       "      <th>vote_down</th>\n",
-       "      <th>date</th>\n",
-       "      <th>ok</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0</td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td>0</td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td>...</td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td>\\n</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>1 rows × 25 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "  id title_main title_sub magazine_nr Wydanie text link source author 1  \\\n",
-       "0  0                                0                                     \n",
-       "\n",
-       "  author 2  ... author 8 author 9 author 10 image image_desp hot vote_up  \\\n",
-       "0           ...                                                            \n",
-       "\n",
-       "  vote_down date     ok  \n",
-       "0             \\n  False  \n",
-       "\n",
-       "[1 rows x 25 columns]"
-      ]
-     },
-     "execution_count": 48,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "df[~df['ok']]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Wydanie wprost-2022.csv\n",
-      "Wydanie wprost-2020.csv\n",
-      "Wydanie wprost-2017.csv\n",
-      "Wydanie wprost-2019.csv\n",
-      "Wydanie wprost-2021.csv\n",
-      "Wydanie wprost-2018.csv\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "files = os.listdir(\"data\")\n",
@@ -209,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -222,19 +105,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "df_all.to_csv(\"Wprost.csv\", index=False)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
