--- a/Classification/files/ngram/ngrams.ipynb
+++ b/Classification/files/ngram/ngrams.ipynb
@@ -2,23 +2,23 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "from ngrams import save_rest_ngrams, lemmatizer, get_eco_vocab\n",
-    "import pandas as pd\n"
+    "import pandas as pd"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import regex as re\n",
-    "files = [\"topics/car_grams.csv\", \"topics/klimat_grams.csv\", \"topics/trash_grams.csv\",\"topics/water_grams.csv\"]\n",
+    "files = [\"topics/car_grams.csv\", \"topics/klimat_grams.csv\", \"topics/trash_grams.csv\",\"topics/water_grams.csv\", \"topics/politic_grams.csv\", \"topics/other_grams.csv\"]\n",
     "data = []\n",
     "for file in files:\n",
     "    df = pd.read_csv(file)\n",
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,20 +39,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "vocab_df = pd.DataFrame(vocab.items(), columns=['phrase', 'count'])\n",
     "vocab_df[~vocab_df['phrase'].isin(df.phrase)].to_csv(\"rest.csv\", index=False)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -71,7 +64,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.11.6"
   }
  },
  "nbformat": 4,
